kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: playclone
  labels:
    name: playclone
    app: playclone
